# StarRailAssistant

./: .gitignore  CHANGELOG.md  Honkai Star Rail.py  Honkai-Star-Rail.bat  Honkai_Star_Rail.bat  Honkai_Star_Rail.py  Honkai_Star_Rail_EN.py  LICENSE  README.md  README_CHT.md  README_EN.md  README_old.md  Release.txt  Simulated_Universe.py  Star Dome Railway.py  config.json  cv_pathfinder.py  cv_tools.py  cv_tracker.py  get_width.py  gui.py  main.py  map_2-2_2.json  map_2-4_1.json  map_3-2_1.json  map_3-2_4.json  map_3-3_3.json  map_3-3_4.json  map_3-4_1.json  map_3-4_2.json  map_3-4_6.json  map_list.json  map_res_list.py  mouse_move.py  picture_list.json  pyproject.toml  real_width.json  requirements.txt  run.bat  star_list.json  (+9 more)
.github/: dependabot.yml  release.yml
map/: map_1-1.json  map_1-1_1.json  map_1-1_2.json  map_1-2_1.json  map_1-2_2.json  map_1-2_3.json  map_1-2_4.json  map_1-3_1.json  map_1-3_2.json  map_1-3_3.json  map_1-3_4.json  map_2-1_1.json  map_2-1_2.json  map_2-2_1.json  map_2-2_2.json  map_2-2_3.json  map_2-3_1.json  map_2-3_2.json  map_2-3_3.json  map_2-3_4.json  map_2-3_5.json  map_2-4_1.json  map_2-4_2.json  map_2-5_1.json  map_2-5_2.json  map_2-5_3.json  map_2-5_4.json  map_2-5_5.json  map_2-6_1 .json  map_2-6_1.json  map_2-6_2.json  map_2-7_1.json  map_2-7_2.json  map_2-7_3.json  map_3-1_1.json  map_3-1_2.json  map_3-1_3.json  map_3-1_4.json  map_3-1_5.json  map_3-1_6.json  (+42 more)
map_data/: convert.xlsx  enemy_info.json  enemy_info.xlsx  enemy_labels.json  get_enemy_pos.py  labels.json  tree.json
model/: label_cn.txt
tool/: calculated.py  log.py  (+8 more)
(+199 files in other folders)
